@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.136 2005/04/12 04:27:42 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.137 2005/04/13 14:38:10 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  13 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Moved 'end >= device_sectors' check out of loop to check for next partition's
+  start point.
 
   11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Finish overhaul of backend partitioning code. Fixed all bugs that stood in
